--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,66 @@
-node_modules
-dist
+# =========================
+# Node / Package Managers
+# =========================
+node_modules/
+**/node_modules/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# =========================
+# Environment Variables
+# =========================
+.env
+.env.*
+!.env.example
+
+# =========================
+# Build Outputs
+# =========================
+dist/
+build/
+out/
+
+client/dist/
+client/.vite/
+
+# =========================
+# TypeScript
+# =========================
+*.tsbuildinfo
+
+# =========================
+# Database (Local Only)
+# =========================
+dev.db
+*.sqlite
+*.sqlite3
+
+# =========================
+# Uploads (User Files)
+# =========================
+uploads/*
+!uploads/.gitkeep
+
+# =========================
+# Logs
+# =========================
+logs/
+*.log
+
+# =========================
+# OS / Editor Junk
+# =========================
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+desktop.ini
+
+.vscode/
+.idea/
+
+# =========================
+# Git
+# =========================
+.git/
